--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "secure-json",
+  "name": "json-edit",
   "version": "0.0.1",
   "description": "edit json files on the server",
-  "main": "server/edit_json.js",
+  "main": "server/json_edit.js",
    "dependencies": {
     "express": "^4.17.1",
     "ace-express": "github:jonathan-annett/ace-express",
