--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "json-edit",
   "version": "0.0.1",
   "description": "edit json files on the server",
-  "main": "server/json_edit.js",
+  "main": "server/json-edit.js",
    "dependencies": {
     "express": "^4.17.1",
     "ace-express": "github:jonathan-annett/ace-express",
